style(Make footer responsive)

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -9,181 +9,185 @@
 </head>
 
 <body>
-	<header>
-		<div class = "container">
-			<div id="website-logo">
-				<h1>Store Manager</h1> 
-			</div>			
-			<nav>
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Services</a></li>
-				</ul>
-			</nav>
-			<div class="dropdown">
-				<img src="./images/icon-menu.png">
-				<div class="profile-info">
-					<div class="profile-photo-container"></div>
-					<div class="label">Name:</div>
-					<div class="details">Jax Bishop</div>
-					<div class="label">Email:</div>
-					<div class="details">bishopjack@gmail.com</div>
-					<hr>
-					<div class="label">Job Title:</div>
-					<div class="details">Admin</div>
-					<div class="label">Last logged in:</div>
-					<div class="details">09-Oct-18 4:07pm</div>
+	<div id="cover">
+		<header>
+			<div class = "container">
+				<div id="website-logo">
+					<h1>Store Manager</h1> 
+				</div>			
+				<nav>
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Services</a></li>
+					</ul>
+				</nav>
+				<div class="dropdown">
+					<img src="./images/icon-menu.png">
+					<div class="profile-info">
+						<div class="profile-photo-container"></div>
+						<div class="label">Name:</div>
+						<div class="details">Jax Bishop</div>
+						<div class="label">Email:</div>
+						<div class="details">bishopjack@gmail.com</div>
+						<hr>
+						<div class="label">Job Title:</div>
+						<div class="details">Admin</div>
+						<div class="label">Last logged in:</div>
+						<div class="details">09-Oct-18 4:07pm</div>
+					</div>
 				</div>
 			</div>
-		</div>
-		
-	</header>
-	<section>
-		<div class="page-content">
-			<div class="profile-info">
-					<div class="profile-photo-container"></div>
-					<div class="label">Name:</div>
-					<div class="details">Jax Bishop</div>
-					<div class="label">Email:</div>
-					<div class="details">bishopjack@gmail.com</div>
-					<hr>
-					<div class="label">Job Title:</div>
-					<div class="details">Admin</div>
-					<div class="label">Last logged in:</div>
-					<div class="details">09-Oct-18 4:07pm</div>
-				</div>
-			<div class="attendant-content">
-				<div class = "container">			
-					<nav>
-						<ul>
-							<li><a href="#"><span class="selected">Products</span></a></li>
-							<li><a href="./attendants.html">Attendants</a></li>
-							<li><a href="#">Categories</a></li>
-						</ul>
-					</nav>
-					<hr>
 
-				</div>
-				<div class="container">
-					<div class="wrapper">	
-						<input type="button" class="confirm checkout" value="New" onclick="window.location.href='./create-product.html';"></input>	
-						<div class="items-box">
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Price: $8
-									<br>
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
+		</header>
+		<div class="cont">
+			<section>
+				<div class="page-content">
+					<div class="profile-info">
+						<div class="profile-photo-container"></div>
+						<div class="label">Name:</div>
+						<div class="details">Jax Bishop</div>
+						<div class="label">Email:</div>
+						<div class="details">bishopjack@gmail.com</div>
+						<hr>
+						<div class="label">Job Title:</div>
+						<div class="details">Admin</div>
+						<div class="label">Last logged in:</div>
+						<div class="details">09-Oct-18 4:07pm</div>
+					</div>
+					<div class="attendant-content">
+						<div class = "container">			
+							<nav>
+								<ul>
+									<li><a href="#"><span class="selected">Products</span></a></li>
+									<li><a href="./attendants.html">Attendants</a></li>
+									<li><a href="#">Categories</a></li>
+								</ul>
+							</nav>
+							<hr>
+
+						</div>
+						<div class="container">
+							<div class="wrapper">	
+								<input type="button" class="confirm checkout" value="New" onclick="window.location.href='./create-product.html';"></input>	
+								<div class="items-box">
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item1.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item2.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item1.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item2.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item1.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item2.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item1.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item2.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item1.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
+									<div class="item tooltip" onclick="displayDialog();">
+										<img src="./images/item2.jpg">
+										<div class="tooltiptext">
+											Price: $8
+											<br>
+											Quantity: 300
+											<br>
+											Min-Inventory: 6
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>	
 		</div>
-	</section>	
-	<footer>
-		<p> Store Manager Copyright &copy; 2018</p>
-	</footer>
-	<div id="dialog-background-window">
-		<div id="dialog-box">
-			<div id="content-header">Select Action to Perform:</div>
-			<div class="options-button">
-				<input id="delete-button" class="delete" type="button" value="Delete"></input>
-				<input id="modify-button" class="modify" type="button" value="Modify"></input>
+		<footer>
+			<p> Store Manager Copyright &copy; 2018</p>
+		</footer>
+		<div id="dialog-background-window">
+			<div id="dialog-box">
+				<div id="content-header">Select Action to Perform:</div>
+				<div class="options-button">
+					<input id="delete-button" class="delete" type="button" value="Delete"></input>
+					<input id="modify-button" class="modify" type="button" value="Modify"></input>
+				</div>
 			</div>
 		</div>
 	</div>
