--- a/UI/create-attendant.html
+++ b/UI/create-attendant.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<div id="cover">
 	<header>
 		<div class = "container">
 			<div id="website-logo">
@@ -20,9 +21,9 @@
 					<li><a href="#">Services</a></li>
 				</ul>
 			</nav>
-		</div>
-		
+		</div>		
 	</header>
+	<div class="cont">
 	<section>
 	<div id="user-form">
 		<div class="container">
@@ -49,8 +50,10 @@
 		</div>
 	</div>
 	</section>	
+</div>
 	<footer>
 		<p> Store Manager Copyright &copy; 2018</p>
 	</footer>
+</div>
 </body>
 </html>
