--- a/UI/records.html
+++ b/UI/records.html
@@ -9,200 +9,203 @@
 </head>
 
 <body>
-	<header>
-		<div class = "container">
-			<div id="website-logo">
-				<h1>Store Manager</h1> 
-			</div>			
-			<nav>
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Services</a></li>
-				</ul>
-			</nav>
-			<div class="dropdown">
-				<img src="./images/icon-menu.png">
-				<div class="profile-info">
-					<div class="profile-photo-container"></div>
-					<div class="label">Name:</div>
-					<div class="details">Mayor Steve</div>
-					<div class="label">Email:</div>
-					<div class="details">stevemayor@gmail.com</div>
-					<hr>
-					<div class="label">Job Title:</div>
-					<div class="details">Attendant</div>
-					<div class="label">Total Sales:</div>
-					<div class="details">81</div>
-					<div class="label">Last logged in:</div>
-					<div class="details">09-Oct-18 4:07pm</div>
+	<div id="cover">
+		<header>
+			<div class = "container">
+				<div id="website-logo">
+					<h1>Store Manager</h1> 
+				</div>			
+				<nav>
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Services</a></li>
+					</ul>
+				</nav>
+				<div class="dropdown">
+					<img src="./images/icon-menu.png">
+					<div class="profile-info">
+						<div class="profile-photo-container"></div>
+						<div class="label">Name:</div>
+						<div class="details">Mayor Steve</div>
+						<div class="label">Email:</div>
+						<div class="details">stevemayor@gmail.com</div>
+						<hr>
+						<div class="label">Job Title:</div>
+						<div class="details">Attendant</div>
+						<div class="label">Total Sales:</div>
+						<div class="details">81</div>
+						<div class="label">Last logged in:</div>
+						<div class="details">09-Oct-18 4:07pm</div>
+					</div>
 				</div>
 			</div>
-		</div>
-		
-	</header>
-	<section>
-		<div class="page-content">
-			<div class="profile-info">
-				<div class="profile-photo-container"></div>
-				<div class="label">Name:</div>
-				<div class="details">Mayor Steve</div>
-				<div class="label">Email:</div>
-				<div class="details">stevemayor@gmail.com</div>
-				<hr>
-				<div class="label">Job Title:</div>
-				<div class="details">Attendant</div>
-				<div class="label">Total Sales:</div>
-				<div class="details">81</div>
-				<div class="label">Last logged in:</div>
-				<div class="details">09-Oct-18 4:07pm</div>
+			
+		</header>
+		<div class="cont">
+			<section>
+				<div class="page-content">
+					<div class="profile-info">
+						<div class="profile-photo-container"></div>
+						<div class="label">Name:</div>
+						<div class="details">Mayor Steve</div>
+						<div class="label">Email:</div>
+						<div class="details">stevemayor@gmail.com</div>
+						<hr>
+						<div class="label">Job Title:</div>
+						<div class="details">Attendant</div>
+						<div class="label">Total Sales:</div>
+						<div class="details">81</div>
+						<div class="label">Last logged in:</div>
+						<div class="details">09-Oct-18 4:07pm</div>
 
-			</div>
-			<div class="attendant-content">
-				<div class = "container">			
-					<nav>
-						<ul>
-							<li><a href="./attendant-dashboard.html">Products</a></li>
-							<li><a href="#"><span class="selected">Records</span></a></li>
-							<li><a href="./cart.html">Cart</a></li>
-						</ul>
-					</nav>
-					<hr>
+					</div>
+					<div class="attendant-content">
+						<div class = "container">			
+							<nav>
+								<ul>
+									<li><a href="./attendant-dashboard.html">Products</a></li>
+									<li><a href="#"><span class="selected">Records</span></a></li>
+									<li><a href="./cart.html">Cart</a></li>
+								</ul>
+							</nav>
+							<hr>
 
-				</div>
-				<div class="container">
-					<div class="wrapper">	
-						<div class="items-box">
-							<div class="item tooltip">
-								<div class="sale-record">
-									<span class="record-details">Sales Id: #134218402</span>
-									<br>
-									<span class="record-date">11-Oct-2018</span>
-								</div>
-								<div class="tooltiptext">
-									Sales Id: #134218402
-									<br>
-									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-									<br>
-									Time: 12:20pm
-								</div>
-							</div>
-							<div class="item tooltip" >
-								<div class="sale-record">
-									<span class="record-details">Sales Id: #134218402</span>
-									<br>
-									<span class="record-date">11-Oct-2018</span>
-								</div>
-								<div class="tooltiptext">
-									Sales Id: #134218402
-									<br>
-									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-									<br>
-									Time: 12:20pm
-								</div>
-							</div>
-							<div class="item tooltip" >
-								<div class="sale-record">
-									<span class="record-details">Sales Id: #134218402</span>
-									<br>
-									<span class="record-date">11-Oct-2018</span>
-								</div>
-								<div class="tooltiptext">
-									Sales Id: #134218402
-									<br>
-									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-									<br>
-									Time: 12:20pm
-								</div>
-							</div>
-							<div class="item tooltip" >
-								<div class="sale-record">
-									<span class="record-details">Sales Id: #134218402</span>
-									<br>
-									<span class="record-date">11-Oct-2018</span>
-								</div>
-								<div class="tooltiptext">
-									Sales Id: #134218402
-									<br>
-									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-									<br>
-									Time: 12:20pm
-								</div>
-							</div>
-							<div class="item tooltip" >
-								<div class="sale-record">
-									<span class="record-details">Sales Id: #134218402</span>
-									<br>
-									<span class="record-date">11-Oct-2018</span>
-								</div>
-								<div class="tooltiptext">
-									Sales Id: #134218402
-									<br>
-									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-									<br>
-									Time: 12:20pm
-								</div>
-							</div>
-							<div class="item tooltip" >
-								<div class="sale-record">
-									<span class="record-details">Sales Id: #134218402</span>
-									<br>
-									<span class="record-date">11-Oct-2018</span>
-								</div>
-								<div class="tooltiptext">
-									Sales Id: #134218402
-									<br>
-									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-									<br>
-									Time: 12:20pm
-								</div>
-							</div>
-							<div class="item tooltip" >
-								<div class="sale-record">
-									<span class="record-details">Sales Id: #134218402</span>
-									<br>
-									<span class="record-date">11-Oct-2018</span>
-								</div>
-								<div class="tooltiptext">
-									Sales Id: #134218402
-									<br>
-									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-									<br>
-									Time: 12:20pm
-								</div>
-							</div>
-							<div class="item tooltip" >
-								<div class="sale-record">
-									<span class="record-details">Sales Id: #134218402</span>
-									<br>
-									<span class="record-date">11-Oct-2018</span>
-								</div>
-								<div class="tooltiptext">
-									Sales Id: #134218402
-									<br>
-									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-									<br>
-									Time: 12:20pm
+						</div>
+						<div class="container">
+							<div class="wrapper">	
+								<div class="items-box">
+									<div class="item tooltip">
+										<div class="sale-record">
+											<span class="record-details">Sales Id: #134218402</span>
+											<br>
+											<span class="record-date">11-Oct-2018</span>
+										</div>
+										<div class="tooltiptext">
+											Sales Id: #134218402
+											<br>
+											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+											<br>
+											Time: 12:20pm
+										</div>
+									</div>
+									<div class="item tooltip" >
+										<div class="sale-record">
+											<span class="record-details">Sales Id: #134218402</span>
+											<br>
+											<span class="record-date">11-Oct-2018</span>
+										</div>
+										<div class="tooltiptext">
+											Sales Id: #134218402
+											<br>
+											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+											<br>
+											Time: 12:20pm
+										</div>
+									</div>
+									<div class="item tooltip" >
+										<div class="sale-record">
+											<span class="record-details">Sales Id: #134218402</span>
+											<br>
+											<span class="record-date">11-Oct-2018</span>
+										</div>
+										<div class="tooltiptext">
+											Sales Id: #134218402
+											<br>
+											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+											<br>
+											Time: 12:20pm
+										</div>
+									</div>
+									<div class="item tooltip" >
+										<div class="sale-record">
+											<span class="record-details">Sales Id: #134218402</span>
+											<br>
+											<span class="record-date">11-Oct-2018</span>
+										</div>
+										<div class="tooltiptext">
+											Sales Id: #134218402
+											<br>
+											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+											<br>
+											Time: 12:20pm
+										</div>
+									</div>
+									<div class="item tooltip" >
+										<div class="sale-record">
+											<span class="record-details">Sales Id: #134218402</span>
+											<br>
+											<span class="record-date">11-Oct-2018</span>
+										</div>
+										<div class="tooltiptext">
+											Sales Id: #134218402
+											<br>
+											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+											<br>
+											Time: 12:20pm
+										</div>
+									</div>
+									<div class="item tooltip" >
+										<div class="sale-record">
+											<span class="record-details">Sales Id: #134218402</span>
+											<br>
+											<span class="record-date">11-Oct-2018</span>
+										</div>
+										<div class="tooltiptext">
+											Sales Id: #134218402
+											<br>
+											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+											<br>
+											Time: 12:20pm
+										</div>
+									</div>
+									<div class="item tooltip" >
+										<div class="sale-record">
+											<span class="record-details">Sales Id: #134218402</span>
+											<br>
+											<span class="record-date">11-Oct-2018</span>
+										</div>
+										<div class="tooltiptext">
+											Sales Id: #134218402
+											<br>
+											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+											<br>
+											Time: 12:20pm
+										</div>
+									</div>
+									<div class="item tooltip" >
+										<div class="sale-record">
+											<span class="record-details">Sales Id: #134218402</span>
+											<br>
+											<span class="record-date">11-Oct-2018</span>
+										</div>
+										<div class="tooltiptext">
+											Sales Id: #134218402
+											<br>
+											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+											<br>
+											Time: 12:20pm
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>	
 		</div>
-	</section>	
-	<footer>
-		<p> Store Manager Copyright &copy; 2018</p>
-	</footer>
-	<div id="dialog-background-window">
-		<div id="dialog-box">
-			<div id="content-header">Remove Item from cart?</div>
-			<div class="options-button">
-				<input id="cancel-button" class="cancel" type="button" value="Cancel"></input>
-				<input id="confirm-button" class="confirm" type="button" value="Confirm"></input>
+		<footer>
+			<p> Store Manager Copyright &copy; 2018</p>
+		</footer>
+		<div id="dialog-background-window">
+			<div id="dialog-box">
+				<div id="content-header">Remove Item from cart?</div>
+				<div class="options-button">
+					<input id="cancel-button" class="cancel" type="button" value="Cancel"></input>
+					<input id="confirm-button" class="confirm" type="button" value="Confirm"></input>
+				</div>
 			</div>
 		</div>
 	</div>
-	
 </body>
 </html>
