--- a/UI/attendants.html
+++ b/UI/attendants.html
@@ -9,219 +9,222 @@
 </head>
 
 <body>
-	<header>
-		<div class = "container">
-			<div id="website-logo">
-				<h1>Store Manager</h1> 
-			</div>			
-			<nav>
-				<ul>
-					<li><a href="./home.html">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Services</a></li>
-				</ul>
-			</nav>
-			<div class="dropdown">
-				<img src="./images/icon-menu.png">
-				<div class="profile-info">
-					<div class="profile-photo-container"></div>
-					<div class="label">Name:</div>
-					<div class="details">Jax Bishop</div>
-					<div class="label">Email:</div>
-					<div class="details">bishopjack@gmail.com</div>
-					<hr>
-					<div class="label">Job Title:</div>
-					<div class="details">Admin</div>
-					<div class="label">Last logged in:</div>
-					<div class="details">09-Oct-18 4:07pm</div>
+	<div id="cover">
+		<header>
+			<div class = "container">
+				<div id="website-logo">
+					<h1>Store Manager</h1> 
+				</div>			
+				<nav>
+					<ul>
+						<li><a href="./home.html">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Services</a></li>
+					</ul>
+				</nav>
+				<div class="dropdown">
+					<img src="./images/icon-menu.png">
+					<div class="profile-info">
+						<div class="profile-photo-container"></div>
+						<div class="label">Name:</div>
+						<div class="details">Jax Bishop</div>
+						<div class="label">Email:</div>
+						<div class="details">bishopjack@gmail.com</div>
+						<hr>
+						<div class="label">Job Title:</div>
+						<div class="details">Admin</div>
+						<div class="label">Last logged in:</div>
+						<div class="details">09-Oct-18 4:07pm</div>
+					</div>
 				</div>
-			</div>
-		</div>
-		
-	</header>
-	<section>
-		<div class="page-content">
-			<div class="profile-info">
-					<div class="profile-photo-container"></div>
-					<div class="label">Name:</div>
-					<div class="details">Jax Bishop</div>
-					<div class="label">Email:</div>
-					<div class="details">bishopjack@gmail.com</div>
-					<hr>
-					<div class="label">Job Title:</div>
-					<div class="details">Admin</div>
-					<div class="label">Last logged in:</div>
-					<div class="details">09-Oct-18 4:07pm</div>
-				</div>
-			<div class="attendant-content">
-				<div class = "container">			
-					<nav>
-						<ul>
-							<li><a href="./admin.html">Products</a></li>
-							<li><a href="./attendants.html"><span class="selected">Attendants</span></a></li>
-							<li><a href="#">Categories</a></li>
-						</ul>
-					</nav>
-					<hr>
+			</div>		
+		</header>
+		<div class="cont">
+			<section>
+				<div class="page-content">
+					<div class="profile-info">
+						<div class="profile-photo-container"></div>
+						<div class="label">Name:</div>
+						<div class="details">Jax Bishop</div>
+						<div class="label">Email:</div>
+						<div class="details">bishopjack@gmail.com</div>
+						<hr>
+						<div class="label">Job Title:</div>
+						<div class="details">Admin</div>
+						<div class="label">Last logged in:</div>
+						<div class="details">09-Oct-18 4:07pm</div>
+					</div>
+					<div class="attendant-content">
+						<div class = "container">			
+							<nav>
+								<ul>
+									<li><a href="./admin.html">Products</a></li>
+									<li><a href="./attendants.html"><span class="selected">Attendants</span></a></li>
+									<li><a href="#">Categories</a></li>
+								</ul>
+							</nav>
+							<hr>
 
-				</div>
-				<div class="container">
-					<div class="wrapper">	
-						<input type="button" class="confirm checkout" value="New" onclick="window.location.href='./create-attendant.html';"></input>	
-						<div class="items-box">
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att1.jpg">
-								<div class="tooltiptext">
-									Name: James Rogue
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att2.jpg">
-								<div class="tooltiptext">
-									Name: Jean Sean
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att3.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att4.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att1.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att2.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att3.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att4.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att1.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att2.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att3.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
-								</div>
-							</div>
-							<div class="item tooltip" onclick="window.location.href='./records.html';">
-								<img src="./images/att4.jpg">
-								<div class="tooltiptext">
-									Name: Kate Riley
-									<br>
-									Total Sales: 258
-									<br>
-									Total Amount: $1,656
-									<br>
-									Last Seen: 12-Oct-18 12:43PM
+						</div>
+						<div class="container">
+							<div class="wrapper">	
+								<input type="button" class="confirm checkout" value="New" onclick="window.location.href='./create-attendant.html';"></input>	
+								<div class="items-box">
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att1.jpg">
+										<div class="tooltiptext">
+											Name: James Rogue
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att2.jpg">
+										<div class="tooltiptext">
+											Name: Jean Sean
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att3.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att4.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att1.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att2.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att3.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att4.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att1.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att2.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att3.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
+									<div class="item tooltip" onclick="window.location.href='./records.html';">
+										<img src="./images/att4.jpg">
+										<div class="tooltiptext">
+											Name: Kate Riley
+											<br>
+											Total Sales: 258
+											<br>
+											Total Amount: $1,656
+											<br>
+											Last Seen: 12-Oct-18 12:43PM
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>	
 		</div>
-	</section>	
-	<footer>
-		<p> Store Manager Copyright &copy; 2018</p>
-	</footer>
-	<script type="text/javascript" src="./scripts/main.js"></script>
+		<footer>
+			<p> Store Manager Copyright &copy; 2018</p>
+		</footer>
+		<script type="text/javascript" src="./scripts/main.js"></script>
+	</div>
 </body>
 </html>
