--- a/UI/cart.html
+++ b/UI/cart.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+	<div id="cover">
 	<header>
 		<div class = "container">
 			<div id="website-logo">
@@ -41,6 +42,7 @@
 		</div>
 		
 	</header>
+	<div class="cont">
 	<section>
 		<div class="page-content">
 			<div class="profile-info">
@@ -160,6 +162,7 @@
 			</div>
 		</div>
 	</section>	
+</div>
 	<footer>
 		<p> Store Manager Copyright &copy; 2018</p>
 	</footer>
@@ -173,5 +176,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="./scripts/main.js"></script>
+	</div>
 </body>
+
 </html>
