style(add navigation tips)

--- a/UI/attendant-dashboard.html
+++ b/UI/attendant-dashboard.html
@@ -17,9 +17,9 @@
 				</div>			
 				<nav>
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="./attendant-dashboard.html">Home</a></li>
 						<li><a href="#">About</a></li>
-						<li><a href="#">Services</a></li>
+						<li><a href="./login.html">Sign Out</a></li>
 					</ul>
 				</nav>
 				<div class="dropdown">
@@ -70,7 +70,8 @@
 
 						</div>
 						<div class="container">
-							<div class="wrapper">	
+							<div class="wrapper">
+							 <span class="tip">Hover an item for details. Click for actions</span>	
 								<div class="items-box">
 									<div class="item tooltip" onclick="displayDialog();">
 										<img src="./images/item1.jpg">
