--- a/UI/create-attendant.html
+++ b/UI/create-attendant.html
@@ -16,10 +16,10 @@
 			</div>			
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Services</a></li>
-				</ul>
+						<li><a href="./admin.html">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="./login.html">Sign Out</a></li>
+					</ul>
 			</nav>
 		</div>		
 	</header>
