--- a/UI/modify-product.html
+++ b/UI/modify-product.html
@@ -16,9 +16,9 @@
 				</div>			
 				<nav>
 					<ul>
-						<li><a href="./home.html">Home</a></li>
+						<li><a href="./admin.html">Home</a></li>
 						<li><a href="#">About</a></li>
-						<li><a href="#">Services</a></li>
+						<li><a href="./login.html">Sign Out</a></li>
 					</ul>
 				</nav>
 			</div>
