style(restyle fonts)

--- a/UI/records.html
+++ b/UI/records.html
@@ -70,7 +70,7 @@
 						</div>
 						<div class="container">
 							<div class="wrapper">	
-								 <span class="tip">Hover an item for details. Click for actions</span>
+								 <span class="tip">Hover an item for details.</span>
 								<div class="items-box">
 									<div class="item tooltip">
 										<div class="sale-record">
