--- a/UI/attendants.html
+++ b/UI/attendants.html
@@ -65,7 +65,7 @@
 						</div>
 						<div class="container">
 							<div class="wrapper">	
-								 <span class="tip">Hover an item for details. Click for actions</span>
+								 <span class="tip">Click on attendant to view records.</span>
 								<input type="button" class="confirm checkout" value="New" onclick="window.location.href='./create-attendant.html';"></input>	
 								<div class="items-box">
 									<div class="item tooltip" onclick="window.location.href='./records.html';">
