style(restyle forms)

--- a/UI/create-attendant.html
+++ b/UI/create-attendant.html
@@ -30,17 +30,17 @@
 			<form method="post">
 				<h3>New Attendant</h3>
 				<div>
-					<label>Name</label>
+					<label>Name:</label>
 					<br>
 					<input type="text"  placeholder="Enter Attendant's Name" name="aname" required></input>
 				</div>
 				<div>
-					<label>Email</label>
+					<label>Email:</label>
 					<br>
 					<input type="email"  placeholder="Enter Attendant's Email" name="aemail" required></input>
 				</div>
 				<div>
-					<label>Qualification</label>
+					<label>Qualification:</label>
 					<br>
 					<input type="text"  placeholder="Enter Attendant's Qualification" name="aquantity" required></input>
 				</div>
