--- a/UI/create-product.html
+++ b/UI/create-product.html
@@ -31,17 +31,17 @@
 						<form method="post">
 							<h3>New Product</h3>
 							<div>
-								<label>Name</label>
+								<label>Name:</label>
 								<br>
 								<input type="text"  placeholder="Enter Product Name" name="pname" required></input>
 							</div>
 							<div>
-								<label>Quantity</label>
+								<label>Quantity:</label>
 								<br>
 								<input type="number"  placeholder="Enter Product Quantity" name="pquantity" required></input>
 							</div>
 							<div>
-								<label>Category</label>
+								<label>Category:</label>
 								<br>
 								<input type="text"  placeholder="Enter Product Category" name="pcategory" required></input>
 							</div>
