--- a/UI/index.html
+++ b/UI/index.html
@@ -35,12 +35,12 @@
 						<form method="post">
 							<h3>User Login</h3>
 							<div>
-								<label>Email</label>
+								<label>Email:</label>
 								<br>
 								<input type="email" id="email" placeholder="Enter Email" name="uname" required></input>
 							</div>
 							<div>
-								<label>Password</label>
+								<label>Password:</label>
 								<br>
 								<input type="password" id="password" placeholder="Enter Password" name="psw" required></imput>
 							</div>
