ch (add product detail page)

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -60,7 +60,7 @@
 							<nav>
 								<ul>
 									<li><a href="#"><span class="selected">Products</span></a></li>
-									<li><a href="./attendants.html">Attendants</a></li>
+									<li><a href="./attendants.html">Records</a></li>
 									<li><a href="#">Categories</a></li>
 								</ul>
 							</nav>
