--- a/UI/records.html
+++ b/UI/records.html
@@ -3,9 +3,10 @@
 <head>
 	<meta name="viewport" content="width=device-width">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed" rel="stylesheet">
 	<link href="./styles/main.css" rel="stylesheet">
 	<link href="./styles/extras.css" rel="stylesheet">
-	<title>Store-Manager | Records</title>
+	<title>Store-Manager | Admin Dashboard</title>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 				</div>			
 				<nav>
 					<ul>
-						<li><a href="./attendant-dashboard.html">Home</a></li>
+						<li><a href="./admin.html">Home</a></li>
 						<li><a href="#">About</a></li>
 						<li><a href="./login.html">Sign Out</a></li>
 					</ul>
@@ -27,19 +28,18 @@
 					<div class="profile-info">
 						<div class="profile-photo-container"></div>
 						<div class="label">Name:</div>
-						<div class="details">Mayor Steve</div>
+						<div class="details">Jax Bishop</div>
 						<div class="label">Email:</div>
-						<div class="details">stevemayor@gmail.com</div>
+						<div class="details">bishopjack@gmail.com</div>
+						<hr>
 						<div class="label">Job Title:</div>
-						<div class="details">Attendant</div>
-						<div class="label">Total Sales:</div>
-						<div class="details">81</div>
+						<div class="details">Admin</div>
 						<div class="label">Last logged in:</div>
 						<div class="details">09-Oct-18 4:07pm</div>
 					</div>
 				</div>
 			</div>
-			
+
 		</header>
 		<div class="cont">
 			<section>
@@ -47,144 +47,68 @@
 					<div class="profile-info">
 						<div class="profile-photo-container"></div>
 						<div class="label">Name:</div>
-						<div class="details">Mayor Steve</div>
+						<div class="details">Jax Bishop</div>
 						<div class="label">Email:</div>
-						<div class="details">stevemayor@gmail.com</div>
+						<div class="details">bishopjack@gmail.com</div>
 						<div class="label">Job Title:</div>
-						<div class="details">Attendant</div>
-						<div class="label">Total Sales:</div>
-						<div class="details">81</div>
+						<div class="details">Admin</div>
 						<div class="label">Last logged in:</div>
 						<div class="details">09-Oct-18 4:07pm</div>
-
 					</div>
 					<div class="attendant-content">
 						<div class = "container">			
 							<nav>
 								<ul>
-									<li><a href="./attendant-dashboard.html">Products</a></li>
-									<li><a href="#"><span class="selected">Records</span></a></li>
-									<li><a href="./cart.html">Cart</a></li>
+									<li><a href="#">Products</a></li>
+									<li><a href="./records.html"><span class="selected">Records</span></a></li>
+									<li><a href="#">Categories</a></li>
 								</ul>
 							</nav>
 						</div>
-						<div class="container">
-							<div class="wrapper">	
-								 <span class="tip">Hover an item for details.</span>
-								<div class="items-box">
-									<div class="item tooltip">
-										<div class="sale-record">
-											<span class="record-details">Sales Id: #134218402</span>
-											<br>
-											<span class="record-date">11-Oct-2018</span>
-										</div>
-										<div class="tooltiptext">
-											Sales Id: #134218402
-											<br>
-											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-											<br>
-											Time: 12:20pm
-										</div>
-									</div>
-									<div class="item tooltip" >
-										<div class="sale-record">
-											<span class="record-details">Sales Id: #134218402</span>
-											<br>
-											<span class="record-date">11-Oct-2018</span>
-										</div>
-										<div class="tooltiptext">
-											Sales Id: #134218402
-											<br>
-											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-											<br>
-											Time: 12:20pm
-										</div>
-									</div>
-									<div class="item tooltip" >
-										<div class="sale-record">
-											<span class="record-details">Sales Id: #134218402</span>
-											<br>
-											<span class="record-date">11-Oct-2018</span>
-										</div>
-										<div class="tooltiptext">
-											Sales Id: #134218402
-											<br>
-											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-											<br>
-											Time: 12:20pm
-										</div>
-									</div>
-									<div class="item tooltip" >
-										<div class="sale-record">
-											<span class="record-details">Sales Id: #134218402</span>
-											<br>
-											<span class="record-date">11-Oct-2018</span>
-										</div>
-										<div class="tooltiptext">
-											Sales Id: #134218402
-											<br>
-											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-											<br>
-											Time: 12:20pm
-										</div>
-									</div>
-									<div class="item tooltip" >
-										<div class="sale-record">
-											<span class="record-details">Sales Id: #134218402</span>
-											<br>
-											<span class="record-date">11-Oct-2018</span>
-										</div>
-										<div class="tooltiptext">
-											Sales Id: #134218402
-											<br>
-											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-											<br>
-											Time: 12:20pm
-										</div>
-									</div>
-									<div class="item tooltip" >
-										<div class="sale-record">
-											<span class="record-details">Sales Id: #134218402</span>
-											<br>
-											<span class="record-date">11-Oct-2018</span>
-										</div>
-										<div class="tooltiptext">
-											Sales Id: #134218402
-											<br>
-											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-											<br>
-											Time: 12:20pm
-										</div>
-									</div>
-									<div class="item tooltip" >
-										<div class="sale-record">
-											<span class="record-details">Sales Id: #134218402</span>
-											<br>
-											<span class="record-date">11-Oct-2018</span>
-										</div>
-										<div class="tooltiptext">
-											Sales Id: #134218402
-											<br>
-											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-											<br>
-											Time: 12:20pm
-										</div>
-									</div>
-									<div class="item tooltip" >
-										<div class="sale-record">
-											<span class="record-details">Sales Id: #134218402</span>
-											<br>
-											<span class="record-date">11-Oct-2018</span>
-										</div>
-										<div class="tooltiptext">
-											Sales Id: #134218402
-											<br>
-											<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
-											<br>
-											Time: 12:20pm
-										</div>
-									</div>
-								</div>
+						<div class="container">						
+							<div class="wrapper">
+								<table>
+									<tr>
+										<th>Attendant ID</th>
+										<th>Attendant Name</th> 
+										<th>Order Id</th> 
+										<th>Time Created</th>
+										<th>Total Item</th>
+										<th>Order Price</th>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>John Doe</td> 
+										<td>161283928</td>
+										<td>649298092</td>
+										<td>25</td>
+										<td>300</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>John Doe</td> 
+										<td>161283928</td>
+										<td>649298092</td>
+										<td>25</td>
+										<td>300</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>John Doe</td> 
+										<td>161283928</td>
+										<td>649298092</td>
+										<td>25</td>
+										<td>300</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>John Doe</td> 
+										<td>161283928</td>
+										<td>649298092</td>
+										<td>25</td>
+										<td>300</td>
+									</tr>
+								</table>
 							</div>
 						</div>
 					</div>
@@ -196,13 +120,14 @@
 		</footer>
 		<div id="dialog-background-window">
 			<div id="dialog-box">
-				<div id="content-header">Remove Item from cart?</div>
+				<div id="content-header">Select Action to Perform:</div>
 				<div class="options-button">
-					<input id="cancel-button" class="cancel" type="button" value="Cancel"></input>
-					<input id="confirm-button" class="confirm" type="button" value="Confirm"></input>
+					<input id="delete-button" class="delete" type="button" value="Delete"></input>
+					<input id="modify-button" class="modify" type="button" value="Modify"></input>
 				</div>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="./scripts/main.js"></script>
 </body>
 </html>
