ch(add single order details table)

--- a/UI/admin-record-details.html
+++ b/UI/admin-record-details.html
@@ -56,17 +56,9 @@
 						<div class="details">09-Oct-18 4:07pm</div>
 					</div>
 					<div class="attendant-content">
-						<div class = "container">			
-							<nav>
-								<ul>
-									<li><a href="#">Products</a></li>
-									<li><a href="./records.html"><span class="selected">Records</span></a></li>
-									<li><a href="#">Categories</a></li>
-								</ul>
-							</nav>
-						</div>
 						<div class="container">						
 							<div class="wrapper">
+								<h2>Order Summary</h2>
 								<table>
 									<tr>
 										<th>Attendant ID</th>
@@ -76,37 +68,30 @@
 										<th>Total Item</th>
 										<th>Order Price</th>
 									</tr>
+									<tr>
+										<td>1</td>
+										<td>John Doe</td> 
+										<td>161283928</td>
+										<td>649298092</td>
+										<td>25</td>
+										<td>300</td>
+									</tr>
+								</table>
+								<h2>Details</h2>
+								<table>
+									<tr>
+										<th>Product ID</th>
+										<th>Product Name</th> 
+										<th>Quantity</th> 
+										<th>Price per Product</th>
+										<th>Total Price</th>
+									</tr>
 									<tr onclick="getOrderId(event);">
 										<td>1</td>
-										<td>John Doe</td> 
-										<td>161283928</td>
-										<td>649298092</td>
-										<td>25</td>
-										<td>300</td>
-									</tr>
-									<tr>
-										<td>1</td>
-										<td>John Doe</td> 
-										<td>161283928</td>
-										<td>649298092</td>
-										<td>25</td>
-										<td>300</td>
-									</tr>
-									<tr>
-										<td>1</td>
-										<td>John Doe</td> 
-										<td>161283928</td>
-										<td>649298092</td>
-										<td>25</td>
-										<td>300</td>
-									</tr>
-									<tr>
-										<td>1</td>
-										<td>John Doe</td> 
-										<td>161283928</td>
-										<td>649298092</td>
-										<td>25</td>
-										<td>300</td>
+										<td>Wireless Projector</td> 
+										<td>10</td>
+										<td>220</td>
+										<td>2200</td>
 									</tr>
 								</table>
 							</div>
