ch(replace category with price in product creation)

--- a/UI/modify-product.html
+++ b/UI/modify-product.html
@@ -43,7 +43,7 @@
 							<div>
 								<label>Category:</label>
 								<br>
-								<input type="text"  placeholder="Enter Product Category" name="pcategory" required></input>
+								<input type="text"  placeholder="Enter Product Price" name="pprice" required></input>
 							</div>
 							<button type="submit">Modify</button>
 							<br>				
