--- a/UI/attendant-dashboard.html
+++ b/UI/attendant-dashboard.html
@@ -63,7 +63,7 @@
 							<nav>
 								<ul>
 									<li><a href="#"><span class="selected">Products</span></a></li>
-									<li><a href="./records.html">Records</a></li>
+									<li><a href="./attendant-records.html">Records</a></li>
 									<li><a href="./cart.html">Cart</a></li>
 								</ul>
 							</nav>
@@ -71,106 +71,126 @@
 						</div>
 						<div class="container">
 							<div class="wrapper">
-							 <span class="tip">Hover an item for details. Click for actions</span>	
+							 <span class="tip">Click on product to add to cart</span>	
 								<div class="items-box">
-									<div class="item tooltip" onclick="displayDialog();">
+									<div class="item" onclick="gotoProductAttendant()">
 										<img src="./images/item1.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
-										</div>
-									</div>
-									<div class="item tooltip" onclick="displayDialog();">
+									<div class="item" onclick="gotoProductAttendant()">
 										<img src="./images/item1.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
-										</div>
-									</div>
-									<div class="item tooltip" onclick="displayDialog();">
+									<div class="item" onclick="gotoProductAttendant()">
 										<img src="./images/item1.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
-										</div>
-									</div>
-									<div class="item tooltip" onclick="displayDialog();">
+									<div class="item" onclick="gotoProductAttendant()">
 										<img src="./images/item1.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
-										</div>
-									</div>
-									<div class="item tooltip" onclick="displayDialog();">
+									<div class="item" onclick="gotoProductAttendant()">
 										<img src="./images/item1.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-											<br>
-											Min-Inventory: 6
+									<div class="item" onclick="gotoProductAttendant()">
+										<img src="./images/item1.jpg">
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
+										</div>
+									</div>
+									<div class="item" onclick="gotoProductAttendant()">
+										<img src="./images/item1.jpg">
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
+										</div>
+									</div>
+									<div class="item" onclick="gotoProductAttendant()">
+										<img src="./images/item1.jpg">
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
+										</div>
+									</div>
+									<div class="item" onclick="gotoProductAttendant()">
+										<img src="./images/item1.jpg">
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
+										</div>
+									</div>
+									<div class="item" onclick="gotoProductAttendant()">
+										<img src="./images/item1.jpg">
+										<div class="quant-avail">
+										 500 available
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
 								</div>
